# rAIce

./: Cargo.toml  LICENSE  README.md
src/: brain.rs  control.rs  evolution.rs  fitness.rs  main.rs  sensors.rs  track.rs  vehicle.rs
