[package]
name = "raice"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-ui = ["bevy_egui"]
parallel-sim = ["rayon"]

[dependencies]
bevy = "0.13.2"
bevy_egui = { version = "0.27.0", optional = true }
bevy_rapier2d = { version = "0.26.0", features = ["simd-stable"], default-features = true }
rand = "0.8"
rayon = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
